@@ -1,6 +1,9 @@
 Changes since version 1.1.1
 ---------------------------
 
+- Fixed deadlock during shutdown that can happen if a thread pool with
+  only one thread is used.
+
 - Moved UserExceptionFactory from Ice namespace to IceInternal namespace
   because UserExceptionFactory is no longer an interface for use
   by applications.
